# rusty-mom

./: README.md  first-time-install.sh
docker/: bash.sh
migrations/: run.sh
migrations/sql/: 20230403212924_add_channel_table.sql  20230404143935_add_message_table.sql.sql
momclient/: .gitignore  Makefile  requirements.txt
momclient/fashion-news-consumer/: __main__.py
momclient/lib/: messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  momlib.py
momclient/news-consumer/: __main__.py  config.json  flask_server.py
momclient/news-consumer/templates/: messages.html  news.html
momclient/news-pusher/: __main__.py  config.json
momclient/news-pusher/templates/: comments.html
momclient/sports-news-consumer/: __main__.py
momclient/src/: __main__.py  messages_pb2.py  messages_pb2.pyi  messages_pb2_grpc.py  momlib.py
protos/: messages.proto
rmom/: Cargo.toml  build-sqlx.sh  sqlx-data.json
rmom-manager/: Cargo.toml  Rocket.toml  TODO.txt  build.rs  environment  sqlx-data.json
rmom-manager/docker/: docker-compose.yaml
rmom-manager/migrations/: add.sh
rmom-manager/migrations/sql/: 20230402194739_add_mom_table.sql  20230402195255_add_queue_table.sql
rmom-manager/scripts/: delete-channel.sh  delete-queue.sh  get-channels.sh  post-queue.sh  put-channel.sh
rmom-manager/src/: lib.rs  main.rs
rmom-manager/src/api/: endpoints.rs  mod.rs  mom.rs  server.rs
rmom-manager/src/client/: endpoints.rs
rmom-manager/src/database/: connection.rs  crud.rs
rmom-manager/src/manager/: mod.rs  mom.rs
rmom-manager/src/utils/: time.rs
rmom/dev-confs/: mom1.yaml  mom2.yaml  mom3.yaml  mom4.yaml
rmom/src/: lib.rs  main.rs  opts.rs
rmom/src/broadcast/: mod.rs  queue.rs  stream_server.rs
rmom/src/database/: connection.rs  crud.rs  mod.rs
systemd/: news-consumer.service  news-pusher.service  rmom-manager.service  rmom.service
