[package]
name = "rmom-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures-lite = "1.12.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.19", features = ["serde"] }
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.8.4"
