[package]
name = "rmom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.5.1"
env_logger = "0.10.0"
futures-lite = "1.12.0"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.5.13", default-features = false, features = ["macros", "postgres", "offline", "migrate", "uuid", "time"] }
time = { version = "0.3.19", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4"] }
