[package]
name = "rmom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.5.1"
env_logger = "0.10.0"
futures-lite = "1.12.0"
log = "0.4.17"
prost = "0.11.8"
sqlx = { version = "0.6.3", default-features = false, features = ["macros", "postgres", "offline", "migrate", "uuid", "time", "bigdecimal", "runtime-tokio-native-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.19", features = ["serde"] }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.12"
tonic = "0.8.3"
uuid = { version = "1.3.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8.4"
